--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
   <div class="container">
-    <div class="site-header">
+      <a href="#main" class="skip">Skip to main content</a>
+      <div class="site-header">
       <h1>Jam Box Studios</h1>
       <div class="main-nav">
         <ul>
@@ -24,27 +25,38 @@
           <li><a href="#">Studio</a></li>
         </ul>
       </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
+   
+
+      <img src="https://placekitten.com/1200/900" alt="white cat" class="banner">
     </div>
+    <main id="main">
     <div class="main-content">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
         <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="name"><b> Name:</b> John Doe</li>  
+          <li itemprop="jobTitle"> <b>Title:</b> CEO</li>
+          <li itemprop="email"> <b>Email:</b> johnjoe@jambox.com</li>
+          <li itemprop="telephone"><b>Phone:</b> 613-000-0000</li>
         </ul>
+
+
         <h1>Address</h1>
-        <p>
-          Jambox Studios
-          123 Guitar Road,
-          Musicville, Danceistan
-          B3T 0L0
+        <p div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+            <span itemprop="streetAddress">
+              Jambox Studios, 
+              123 Guitar Road,
+            </span>
+            <span itemprop="addressLocality">Musicville</span>,
+            <span itemprop="addressRegion">Danceistan</span>
+            <span itemprop="postalCode">B3T 0LO</span>
+          </div>
         </p>
+
+    </main>
       </div>
       <div class="contact-section">
         <h1>Contact Us</h1>
@@ -54,8 +66,8 @@
           <input type="text" placeholder="Email">
           <input type="text" placeholder="Subject">
           <b>Your Message</b>
-          <textarea></textarea>
-          <button type="submit">Send</button>
+          <textarea role="textbox"  aria-label="Type here your questions or concerns" ></textarea>
+          <button role="button" aria-label="Click to send your message to contact us" type="submit">Send</button>
         </form>
       </div>
     </div>
